# qloo

./: .gitignore  README.md  task.md
agentic.ai/: .env  README.md  env.example  get_v3_token.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  senaryo.md  spec.md  test_v3_ws.py
agentic.ai/app/: __init__.py  config.py  main.py
agentic.ai/app/core/: __init__.py  concierge.py  metrics.py  prompt_templates.py  qloo_integration.py
agentic.ai/app/core/agent/: __init__.py  api_executor.py  concierge_agent.py  intent_analyzer.py  response_generator.py
agentic.ai/app/core/llm/: __init__.py  gemini_wrapper.py
agentic.ai/app/core/llm/prompts/: __init__.py  intent_prompts.py  response_prompts.py
agentic.ai/app/core/tools/: __init__.py  base_tool.py  qloo_tools.py
agentic.ai/app/schemas/: chat.py
agentic.ai/app/utils/: logger.py
agentic.ai/static/: chat.html
agentic.ai/tests/: test_concierge_1.py  test_full_integration_5.py  test_gemini_2.py  test_intent_analysis_4.py  test_qloo_api_3.py
docs/: API.md  Capability.md  mail.md  plan.md  product.md  tech.md
module.qlooapi/: README.md  apicalldatalist.md  codespecs.md  example_llm_integration.py  gemini_qloo_integration.py  qloo_llm_integration.py  qlooapi.md  requirements.txt  simple_test.py  test_api.py
physical.ai/: context.md
